[metadata]
name = silabs-flasher
author = Stefan Agner
description = Tool to flash Silicon Labs Wireless Gecko devices.
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
version = 0.0.2
url = https://github.com/agners/silabs-flasher
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Environment :: Console
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Software Development :: Embedded Systems
license_files = LICENSE.txt

[options]
python_requires = >= 3.7
scripts = silabs-flasher
install_requires =
  bellows
  xmodem
  pyserial
  click
  pexpect

[options.extras_require]
gpio =
    gpiod>=1.5.3
